--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" android:screenOrientation="sensorPortait">
+            android:label="@string/name" android:screenOrientation="sensorPortait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
